# ddss-llm-inference-platform

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mlc_config.json  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
della/: README.md  hf_model_downloader.py  prepare_container.sh  setup.sh  test_launch.sh
deployment-gui/: app.py
docs/: conf.py  index.md  readme.md  roadmap.md  usage.md  vision.md
docs/api/: llm_inference_platform.rst  llm_inference_platform.utils.rst
docs/della/: hf_model_downloader.py  prepare_container.sh  test_launch.sh
docs/local/: README.md
local/: README.md  run_llama-7b.sh
src/llm_inference_platform/: __init__.py  _slurm.py  _version.py  cli.py  deploy.py  deploy_app.py  hf_model_downloader.py  slurm.py  slurm_template.slurm  ssh.py
src/llm_inference_platform/utils/: log.py
tests/: test_cli.py  test_deploy.py  test_package.py  test_slurm.py  test_ssh.py
